changed html file names as index

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="links">
           <ul>
             <li class="active">
-              <a href="web.html">Home</a>
+              <a href="index.html">Home</a>
             </li>
-            <li><a href="./project/Projects.html">Projects</a></li>
-            <li><a href="./contact/contacts.html">Contacts</a></li>
-            <li><a href="./more/more.html">More</a></li>
+            <li><a href="./project/index.html">Projects</a></li>
+            <li><a href="./contact/index.html">Contacts</a></li>
+            <li><a href="./more/index.html">More</a></li>
           </ul>
         </div>
     </div>
