changed each links

--- a/more/index.html
+++ b/more/index.html
@@ -11,11 +11,11 @@
         <div class="webName">Dahee's web</div>
         <div class="links">
           <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../project/index.html">Projects</a></li>
-            <li><a href="../contact/index.html">Contacts</a></li>
+            <li><a href="../">Home</a></li>
+            <li><a href="../project/">Projects</a></li>
+            <li><a href="../contact/">Contacts</a></li>
             <li class="active">
-                <a href="./index.html">More</a>
+                <a href="./">More</a>
             </li>
           </ul>
         </div>
