--- a/contact/index.html
+++ b/contact/index.html
@@ -11,12 +11,12 @@
         <div class="webName">Dahee's web</div>
         <div class="links">
           <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../project/index.html">Projects</a></li>
+            <li><a href="../">Home</a></li>
+            <li><a href="../project/">Projects</a></li>
             <li class="active">
-                <a href="./index.html">Contacts</a>
+                <a href="./">Contacts</a>
             </li>
-            <li><a href="../more/index.html">More</a></li>
+            <li><a href="../more/">More</a></li>
           </ul>
         </div>
     </div>
