--- a/project/index.html
+++ b/project/index.html
@@ -11,12 +11,12 @@
         <div class="webName">Dahee Kim</div>
         <div class="links">
           <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../l">Home</a></li>
             <li class="active">
-                <a href="./index.html">Projects</a>
+                <a href="./">Projects</a>
             </li>
-            <li><a href="../contact/index.html">Contacts</a></li>
-            <li><a href="../more/index.html">More</a></li>
+            <li><a href="../contact/">Contacts</a></li>
+            <li><a href="../more/">More</a></li>
           </ul>
         </div>
       </div>
