--- a/contact/index.html
+++ b/contact/index.html
@@ -14,7 +14,7 @@
             <li><a href="../">Home</a></li>
             <li><a href="../project/">Projects</a></li>
             <li class="active">
-                <a href="./">Contacts</a>
+                <a href="../contact/">Contacts</a>
             </li>
             <li><a href="../more/">More</a></li>
           </ul>
