--- a/more/index.html
+++ b/more/index.html
@@ -15,7 +15,7 @@
             <li><a href="../project/">Projects</a></li>
             <li><a href="../contact/">Contacts</a></li>
             <li class="active">
-                <a href="./">More</a>
+                <a href="../more/">More</a>
             </li>
           </ul>
         </div>
