--- a/project/index.html
+++ b/project/index.html
@@ -11,9 +11,9 @@
         <div class="webName">Dahee Kim</div>
         <div class="links">
           <ul>
-            <li><a href="../l">Home</a></li>
+            <li><a href="../">Home</a></li>
             <li class="active">
-                <a href="./">Projects</a>
+                <a href="../project/">Projects</a>
             </li>
             <li><a href="../contact/">Contacts</a></li>
             <li><a href="../more/">More</a></li>
