--- a/contact/index.html
+++ b/contact/index.html
@@ -22,6 +22,7 @@
     </div>
 
     <h3>My contacts</h3>
+    <div id="explain">click icon to go to my pages</div>
     <div id="images">
         <a href="https://www.linkedin.com/in/dahee-kim-350a99320/" target="_blank"
         id="linkedin">
