--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         Hello, My name is Dahee Kim. <br>
         I'm living in Seoul currently taking bachelor's degree program in Hansung University. <br>
         I'm expecting to graduate in June, 2025. <br><br>
-        I have a experience of studying abroad at <mark>Northeatsern Illinois University</mark> in USA for a year from 2023 to 2024.<br>
+        I have a experience of studying abroad at <mark>Northeastern Illinois University</mark> in USA for a year from 2023 to 2024.<br>
         I took Modern Database Management, Artificial Intelligence, Server Side Web Programming and Event-Driven Programming in Computer Science department. <br>
         As elective classes I took following 4 classes for various reasons:<br>
         Music Theories: I wanted to know more about music theories in general because once I thought about making an AI that categories music genre and makes recommendation to people. <br>
